--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: gudwort
+name: tomohulk
 
 # Short bio or description (displayed in the header)
 description: Homebrewer, Father, Husband, Tinker
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: "https://github.com/gudwort.png?size=500"
+avatar: "https://github.com/tomohulk.png?size=500"
 
 #
 # Flags below are optional
@@ -20,26 +20,26 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: gudwort
-  instagram: gudwort
-  reddit: gudwort
+  github: tomohulk
+  instagram: tomohulk
+  reddit: tomohulk
   linkedin:
-  twitter: gudwort
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  twitter: tomohulk
+  stackoverflow: users/691551/tomohulk
+  youtube: UCdezPgvhJ605nxJYSrNXRGg
   taplistio: 963267
-  thingiverse: gudwort
+  thingiverse: tomohulk
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus_short_name: gudwort
+disqus_short_name: tomohulk
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-142482838-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://gudwort.github.io
+url: https://tomohulk.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
