--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: tomohulk
+name: tŏmōhulk
 
 # Short bio or description (displayed in the header)
 description: Homebrewer, Father, Husband, Tinker
