--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: tŏmōhulk
 
 # Short bio or description (displayed in the header)
-description: Homebrewer, Father, Husband, Tinker
+description: Homebrewer, Father, Husband, Nerd
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: "https://github.com/tomohulk.png?size=500"
