--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: tomohulk
-  instagram: tomohulk
+  instagram:
   reddit: tomohulk
   linkedin: tomohulk
   twitter: tomohulk
@@ -55,7 +55,7 @@ baseurl: ""
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
-version: v1.2.0
+version: v3.8.6
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
