--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,18 @@
 #
 # This file contains configuration flags to customize your site
-# docker command to test: docker run -v $(pwd):/srv/jekyll -p 4000:4000 -it jekyll/jekyll:3.8.6 jekyll serve
+# docker command to test:
+#docker run -v $(pwd):/srv/jekyll \     
+#    -p 4000:4000 \
+#    -it \
+#    jekyll/jekyll:3.8.6 \
+#    jekyll serve
 #
 
 # Name of your site (displayed in the header)
 title: tŏmōhulk
 
 # Short bio or description (displayed in the header)
-description: Homebrewer, Father, Husband, Nerd
+description: Father, Husband, Metal Head, Homebrewer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: "https://github.com/tomohulk.png?size=500"
